# dandruffapples

./: .gitignore  CMakeLists.txt  README  hosts  launch.sh  launch2.sh  local.sh  start-n-clients.sh  start-n-regions.sh  startup.sh  startup_local.sh
client/: .gitignore  CMakeLists.txt  COMMENTED_AI_CODE.txt  ai_debug_movedown.cpp  ai_forager.cpp  ai_friendly_vaughan.cpp  ai_rises.cpp  ai_scared.cpp  ai_vaughan.cpp  client  client.cpp  client.h  client_ai.cpp  clientviewer.builder  clientviewer.cpp  clientviewer.glade  clientviewer.h  config  eventclient.cpp  remotecontrol.cpp  variant.h
clientviewer/: .gitignore  CMakeLists.txt  clientviewer  clientviewer.builder  clientviewer.cpp
clockserver/: .gitignore  CMakeLists.txt  clockserver  clockserver.cpp  config
cmake/: FindOpenCL.cmake
common/: .gitignore  CMakeLists.txt  areaengine.cpp  areaengine.h  claim.proto  claimteam.proto  clientrobot.proto  except.h  functions.cpp  functions.h  globalconstants.h  helper.cpp  helper.h  imageconstants.h  imageformat.h  logworld.proto  messagequeue.cpp  messagequeue.h  messagereader.cpp  messagereader.h  messagewriter.cpp  messagewriter.h  mssconnection.cpp  mssconnection.h  net.cpp  net.h  parseconf.cpp  parseconf.h  pngfile.proto  ports.h  puckstack.proto  regionrender.proto  regionupdate.proto  serverrobot.proto  timestep.proto  types.h  worldinfo.proto
controller/: CMakeLists.txt  controller  controller.cpp
logmerger/: CMakeLists.txt  logmerger.cpp
logviewer/: .gitignore  CMakeLists.txt  gui.cpp  gui.h  home.cpp  home.h  logviewer  logviewer.cpp  logviewer.h  main.cpp  puck.cpp  puck.h  puckstack.cpp  puckstack.h  robot.cpp  robot.h  tempMakefile
pngviewer/: CMakeLists.txt  config  pngviewer  pngviewer.builder  pngviewer.cpp
regionserver/: .gitignore  CMakeLists.txt  areaengine.cpp  areaengine.h  config  config2  config3  config4  config5  config6  config7  config8  config9  net.cpp  net.h  regionserver  regionserver.cpp
scorekeeper/: .gitignore  CMakeLists.txt  scorekeeper  scorekeeper.cpp
worldviewer/: .gitignore  CMakeLists.txt  config  drawer.cpp  drawer.h  worldviewer  worldviewer.builder  worldviewer.cpp  worldviewer.glade
